# Storage-Migration

./: README.md
pallets/nicks/: Cargo.toml  README.md
pallets/nicks/src/: lib.rs  migrations.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
